--- a/DWUI_APP_FRMWRK.css
+++ b/DWUI_APP_FRMWRK.css
@@ -28,7 +28,7 @@ box-sizing: border-box;
 
 .bg-image {
 /* The image used */
-background-image: url("1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg");
+background-image: url("Achenkoil.jpg");
 
 /* Add the blur effect */
 filter: blur(8px);
