--- a/DWUI_APP_FRMWRK.css
+++ b/DWUI_APP_FRMWRK.css
@@ -28,7 +28,7 @@ box-sizing: border-box;
 
 .bg-image {
 /* The image used */
-background-image: url("Achenkoil.jpg");
+background-image: url("Munnar.jpg");
 
 /* Add the blur effect */
 filter: blur(8px);
